--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-pandas
-numpy
-yfinance
-streamlit
-matplotlib
-scikit-learn
-forex-python
+pandas>=1.3.0
+numpy>=1.21.0
+yfinance>=0.2.0
+streamlit>=1.10.0
+matplotlib>=3.4.0
+scikit-learn>=0.24.0
+forex-python>=1.8
